--- a/src/webapp/WEB-INF/pages/show_all_cars.html
+++ b/src/webapp/WEB-INF/pages/show_all_cars.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <title>All Cars</title>
 </head>
+
 <body>
 
 <div>
-    <table border="1">
+    <table >
+
+        <style>
+            table {}
+            th, td {
+                border: 1px solid black;
+            }
+        </style>
+
         <tr>
             <th>Id</th>
             <th>Model</th>
